@@ -10,6 +10,9 @@ releases may be found in the file ChangeLog.txt.
 
 Bugs fixed in 3.19.1
 ====================
+[2868278] Minimize via the system menu, SystemTray menu and system control
+box button now locks the database if the preference 'Lock on Minimize' is
+set.
 [2868244] Change font dialogs now work again.
 
 New Features for 3.19.1
@@ -18,7 +21,9 @@ None
 
 Changes to Existing Features in 3.19.1
 ======================================
-None
+[2868278] The SystemTray Unlock menu item now, if the correct passphrase is
+given, only unlocks the databse. To show the application, use the Restore
+menu item.
 
 Bugs fixed in 3.19
 ==================
